@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Use encoded UIDs as IDs in Kolab driver.
 * [mjr] Fix support for due/start dates for certain ActiveSync clients (Bug #11693).
 * [jan] Fix importing tasks from iCalendar (Bug #11681).
 * [jan] Fix listing of recurring tasks via timeobjects API.
@@ -1245,6 +1246,7 @@
    <date>2012-10-30</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Use encoded UIDs as IDs in Kolab driver.
 * [mjr] Fix support for due/start dates for certain ActiveSync clients (Bug #11693).
 * [jan] Fix importing tasks from iCalendar (Bug #11681).
 * [jan] Fix listing of recurring tasks via timeobjects API.
